--- a/FilmFusionAPI/appsettings.json
+++ b/FilmFusionAPI/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HttpClientSettings": {
+    "BaseAddress": "https://api.themoviedb.org/3/"
+  }
 }
-
