--- a/FilmFusionAPI/appsettings.json
+++ b/FilmFusionAPI/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "HttpClientSettings": {
-    "BaseAddress": "https://api.themoviedb.org/3/"
+  "MoviesApi": {
+    "BaseAddress": "https://api.themoviedb.org/3/",
+    "ApiKey": "",
+    "ReadAccessToken": ""
   }
 }
