--- a/FilmFusionAPI/FilmFusionAPI.csproj
+++ b/FilmFusionAPI/FilmFusionAPI.csproj
@@ -11,5 +11,6 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 </Project>
